<resources>
    <string name="app_name">MyGithubApp</string>
    <string name="searchbar_placeholder">Search Username</string>
    <string name="tvUsername">username</string>
    <string name="tvDesctiption">Description</string>
    <string name="tv_DetailName">Nama</string>
    <string name="tv_DetailUsername">Username</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="tv_DetailFollowers">%d Followers</string>
    <string name="tv_DetailFollowing">%d Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvfollowusername">tvFollowUsername</string>
    <string name="menu_title_favorite">Favorite</string>
    <string name="menu_title_themeOption">Theme</string>
    <string name="toggle_switch">Click Me!</string>
</resources>